# quick-xml2js-parser

./: .gitignore  README.md  package-lock.json  package.json  playground.js
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
native/src/xml_node/: mod.rs
native/src/xml_to_js_object/: mod.rs
native/src/xml_to_struct_to_js_object/: mod.rs
playground/: index.js  sample.xml
